GER: Focus Tree Draft VI

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -15,7 +15,7 @@ GER_doctrine_mobile_2_desc:0 "Swift manoeuvres, encircling and cutting off pocke
 GER_doctrine_mobile_3:0 "Invest in Panzer Factories"
 GER_doctrine_mobile_3_desc:0 "With a little directed investment, we could raise productivity of our armor factories by quite a lot. Some of our more conservative-minded generals will not approve of this investment, though."
 
-GER_mil_expansion_naval_1:0 "Start modernising our navy bases"
+GER_mil_expansion_naval_1:0 "Finish 1934 Navy Plan"
 GER_mil_expansion_naval_1_desc:0 "The Kaiserliche Marine stands unchallenged in any sea on the planet. For now. The Union of Britain, The French, The Americans and the Japanese will all jealously try to outdo us. If left unchecked, our naval domination will end. We should continue the large navy modernisation project initiated back in 1934."
 
 GER_global1:0 "Supply lines to Singapore"
@@ -68,7 +68,7 @@ GER_security:0 "Institute the Verdeckte Reichspolizei"
 GER_security_desc:0 "Verpo"
 GER_kaiserbund:0 "The Kaiserbund"
 GER_kaiserbund_desc:0 "In light of the ongoing economic stagnation, the Reichstag representatives of the FVP and the NLP have proposed a plan dubbed the Kaiserbund project. It promises to greatly cut expenses of our colonial administration by handing over administration of our colonial empire to local governments in a looser federation with our home administration..."
-GER_security_2:0 "Ban French Organisations?"
+GER_security_2:0 "Ban French Organisations"
 GER_security_2_desc:0 "The formerly French-controlled regions in the Western parts of Germany have been unruly for a long time. French nationalism is widespread in the population, and French cultural and political organisations exist a plenty. Banning them could suppress French nationalism. Or it could radicalise it. The French will not be happy either way."
 GER_security_3:0 "Manoeuvres in Elsaß-Lothringen"
 GER_security_3_desc:0 "The despicable Parisians feel bold enough to defy our rule and are supporting insurgents in Lorraine! After extensive talks with the Kaiser and High Command, the Chancellor has approved partial mobilisation of the reserves and is considering massive military exercise in Alsace-Lorraine, including air and armour detachments and military observers from Mitteleuropa member states."
@@ -236,15 +236,15 @@ gerdom.14.a:0 "Mein Gott! Shocking!"
 
 # Tirpitzprogramm
 
-gerdom.15.t:0 "The Tirpitzprogramm"
-gerdom.15.d:0 "Leading industrials of our marine industry and technology research have formed a comittee for the fulfillment of the Tirpitzprogramm. Today, they have come towards our admiralty to offer their services, and each year we will able to review what the focus of this semi-military industrial complex should lie on. What will our first years' focus be?"
+gerdom.15.t:0 "The 1934 Navy Program"
+gerdom.15.d:0 "The Kaiserliche Marine stands as the strongest Navy in the world in the year 1936, but many challenges will face it in the coming years. The expansionist Empire of Japan and resurgent Commune of France both are key future enemies to unseat German naval superiority across the world. \n\nIn 1934, we have begun a large naval construction plan, and the ships begun then are slowly begin finished. However, with our naval industry still limited, we will have to limit ourselves to one area of production. What should we focus on the next six months?"
 gerdom.15.a:0 "Battleships!"
 gerdom.15.b:0 "Carriers!"
 gerdom.15.c:0 "Destroyers!"
 gerdom.15.e:0 "U-Boats!"
 
-gerdom.16.t:0 "Reviewing Tirpitzprogramm"
-gerdom.16.d:0 "The comitte for the fulfillment of the Tirpitzprogram has contacted the admiralty today. Last years' program has been fulfilled, and the wharfs are awaiting new orders. What should next years' focus be?"
+gerdom.16.t:0 "Reviewing the 1934 Navy Program"
+gerdom.16.d:0 "In 1934, we have begun a large naval construction plan, and the ships begun then are slowly begin finished. However, with our naval industry still limited, we will have to limit ourselves to one area of production. What should we focus on the next six months?"
 gerdom.16.a:0 "Begin the construction of a pair of Battleships!"
 gerdom.16.b:0 "Begin the construction of a pair of Carriers!"
 gerdom.16.c:0 "A squadron of destroyers!"
@@ -254,6 +254,15 @@ gerdom.16.g:0 "Continue carrier construction."
 gerdom.16.h:0 "More destroyers."
 gerdom.16.i:0 "More U-Boats."
 gerdom.16.j:0 "The program has been fulfilled!"
+
+# Schleicher and the GVLP
+
+gerdom.17.t:0 "Kurt von Schleicher and the DVLP"
+gerdom.17.d:0 "'Scandal! Scandal! Reichskanzler von Schleicher observed dining with Alfred von Hugenberg! Scandal!' cry the newspaper boys today. The prestigious Berliner Tagblatt, already responsible for the publication of the infamous Osthilfeskandal in 1923 that led to the end of the Ludendorff regime, has landed another coup. \n\nA reporter was able to observe and even partially overhear a conversation between Reichskanzler Kurt von Schleicher and the leader of the reactionary Junker party DVLP, Alfred von Hugenberg, at a Berlin varieté. The lower standing of the establishment only adds to the scandal. \n\nAnd while crowds come together to discuss the news, one topic is the most interesting; What will be the Kaisers reaction once he opens his morning newspaper?"
+gerdom.17.a:0 "JOHANN! GET VON PAPEN!"
+gerdom.17.b:0 "THE SOCIAL DEMOCRATS CAN'T BE WORSE!"
+gerdom.17.c:0 "TIME FOR BRÜNING!"
+gerdom.17.e:0 "Damn faked news..."
 
 # Election of 1937
 
@@ -283,7 +292,7 @@ gerdom.30.b:0 "Appoint Heinrich Brüning - it's time for fresh wind!"
 gerdom.30.c:0 "Appoint Kurt von Schleicher, the kaisertreue alternative!"
 
 gerdom.32.t:0 "It's war!"
-gerdom.32.d:0 "There can be no distractions! We are at War with the Syndicalist forces! It’s a battle for the very soul of our great empire and we must focuss on winning it!"
+gerdom.32.d:0 "There can be no distractions! We are at War with the Syndicalist forces! It’s a battle for the very soul of our great empire and we must focus on winning it!"
 gerdom.32.a:0 "No elections until we stand in Paris!"
 
 # Election of 1942
@@ -559,11 +568,6 @@ gerdom.100.a:0 "We shall uphold our promises!"
 gerdom.100.b:0 "Africa shall remain German forevermore!"
 
 # Security
-
-gerdom.104.t:0 "Question of French speaking minorities in the German Empire"
-gerdom.104.d:0 "The French-speaking minority in our western border regions was always considered as liability, since their loyalty to our state was always in question. This is considered true especially now, with the increasingly belligerent Commune of France rising from her ashes on our western borders. Reactionist, nationalist and militarist groups want to enforce a bill that increases military and police control in Wallonia and Lorraine to effectively enforce public order, while liberals think that such drastic steps are not necessary to maintain security of our border regions."
-gerdom.104.a:0 "Increase military control in the border regions!"
-gerdom.104.b:0 "Allow these petty Frenchmen to meet in their petty clubs"
 
 gerdom.105.t:0 "Germany Suppresses its French Population!"
 gerdom.105.d:0 "The German Empire, afraid of the rising power of our state decided to tighten control in border region, since they are fearful of our growing influence! We must be patient, soon the time will come, when our brothers in Wallonia, Lorraine and Alsace shall be liberated!"
@@ -925,7 +929,6 @@ GER_black_monday1:0 "Schachtplan"
 GER_black_monday2:0 "Grönerplan"
 german_eco_finished:0 "Economic Boost"
 german_eco_finished:0 "Our economy has received new incentives, many has begun to flow. While it will not hold forever, for a time we should have something of a bonus on our hands."
-GER_improved_security:0 "Tight Restrictions"
 GER_bunkrupt_fact:0 "An important industrial corporation declared bankruptcy"
 DCGB:0 "Deutscher-Christlicher Gewerkschaftsbund"
 GER_rhine_unrest:0 "Workers' Strike"
@@ -938,8 +941,8 @@ GER_renwed_militarism:0 "Renewed Militarism"
 GER_awoken_militarism:0 "Awoken Militarism"
 GER_research_boost:0 "Research Funding"
 GER_victors_of_wwi:0 "Victors of the Weltkrieg"
-GER_victors_of_wwi_second:0 "Victors of the Weltkrieg"
 GER_tank_idea:0 "Investment in Panzers"
+GER_tirpitz_idea:0 "Tirpitzprogramm"
 
 ### Tooltips
 GER_mackensen_retires:0 "You can now reform the military command"
@@ -966,6 +969,7 @@ women_suffrage:0 "Awareness of the issue of Women Suffrage"
 GER_women_suffrage_tp:0 "Awareness of the issue of Women Suffrage will rise."
 GER_women_suffrage_high_tp:0 "Awareness of the issue of Women Suffrage will rise a lot."
 GER_halbstarke:0 "Problems with Halbstarke"
+1934_complete:0 "1934 Navy Program completed"
 
 ### Opinion Modifiers
 sri_lanka:0 "Imperialist Bastard"
