Fengtian Informal Empire Mechanic (Hopefully no bugs).
(applying from stash so this could make a weird merge, we'll see)

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -7,7 +7,12 @@ JAP_WAR_REP_GER:0 "War Reparations from Japan"
 JAP_WAR_REP_FULL:0 "War Reparations to Germany"
 JAP_WAR_REP_GER_FULL:0 "War Reparations from Japan"
 FNG_CHI_CONQUERED:0 "We Unified China"
-
+#Informal Empire Mechanic
+FNG_informal_empire_1:0 "Expel the Japanese Bandits!"
+FNG_informal_empire_2:0 "Preservation of the Xinhai Order"
+FNG_informal_empire_3:0 "Mantetsu Influence"
+FNG_informal_empire_4:0 "Pervasive Mantetsu Influence"
+FNG_informal_empire_5:0 "Mantetsu Dominance"
 ### Parties ###
 FNG_totalist_party:0 "Manchu Communist Party"
 FNG_totalist_party_long:0 "Manchu Communist Party"
@@ -453,3 +458,20 @@ fengtian.43.d:0 "With the ousting of the Manchurian Qing dynasty from Peking and
 fengtian.43.a:0 "We should stay in Fengtian"
 fengtian.43.b:0 "Beijing is our new capital"
 fengtian.43.c:0 "Nanjing is our new capital"
+##New Fengtian Events (Flame)##
+#Informal Empire Mechanic
+fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
+fengtian.informalempire.1.d:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation! We will naturally be deprived of foreign material support, but the Chinese people now rally behind us. Onward!"
+fengtian.informalempire.1.a:0 "Wansui!"
+fengtian.informalempire.2.t:0 "Preservation of the Xinhai Order"
+fengtian.informalempire.2.d:0 "Fengtian is the sole national government upholding the order established by the Xinhai Revolution in 1911, which called for the overthrow of the Qing and the establishment of a Republic. Although its republican commitments are questionable, and Southern reclamation is currently unrealistic, the government has loudly advocated both goals, as they foster domestic legitimacy."
+fengtian.informalempire.2.a:0 "Defend the revolutionary values!"
+fengtian.informalempire.3.t:0 "Mantetsu Influence"
+fengtian.informalempire.3.d:0 "The South Manchuria Railway Company, colloquially Mantetsu, has long dominated large sectors of Fengtian's economy, and in turn acts as Japan's primary means of influence over the government. While this influence is unwelcome, it brings crucial capital and technology without which the Grand Marshal could never hope to retake China."
+fengtian.informalempire.3.a:0 "A necessary evil"
+fengtian.informalempire.4.t:0 "Pervasive Mantetsu Influence"
+fengtian.informalempire.4.d:0 "Our factories rumble with activity, churning out weapons, supplies, and every-day conveniences at an astounding rate. None of this would be possible without Japan, but whispers of discontent abound. Who are we fighting for, China or Japan? Is the Republic really being strengthened, or instead brought to its knees by foreign exploitation? Is this truly necessary?"
+fengtian.informalempire.4.a:0 "How much further can this go?"
+fengtian.informalempire.5.t:0 "Mantetsu Dominance"
+fengtian.informalempire.5.d:0 "Japanese expertise and Mantetsu's influence propels Fengtian forward in ways previously thought impossible, but for all intents and purposes most meaningful control has passed from the hands of the Assembly to Japan. The Grand Marshal, for better or worse, stands alone before Mantetsu's overwhelming power in the country. It will be up to him to determine the path forward, if there is even one to be found, even as the legitimacy of the government collapsed about him."
+fengtian.informalempire.5.a:0 "These are dire times"
