added Hawaiian focus tree, no effects yet though

--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -1,5 +1,144 @@
 ﻿l_english:
 
+#################################
+#		Focus Tree				#
+#################################
+HAW_politics:0 "Future of Hawaii"
+HAW_politics_desc:0 ""
+####Politics####
+HAW_monarchy:0 "Restore the Monarchy"
+HAW_monarchy_desc:0 ""
+HAW_return_ceded_lands:0 "Return the Ceded Lands"
+HAW_return_ceded_lands_desc:0 ""
+HAW_constitutional_monarchy:0 "Constitutional Monarchy"
+HAW_constitutional_monarchy_desc:0 ""
+HAW_punana_leo:0 "Punana Leo"
+HAW_punana_leo_desc:0 ""
+HAW_hawaiian_renassiance:0 "Hawaiian Renassiance"
+HAW_hawaiian_renassiance_desc:0 ""
+HAW_republic:0 "Hawaiian Republic"
+HAW_republic_desc:0 ""
+HAW_support_big_five:0 "Support the Big Five"
+HAW_support_big_five_desc:0 ""
+HAW_republicanism:0 "Republicanism"
+HAW_republicanism_desc:0 ""
+HAW_education_expansion:0 "Education Expansion" 
+HAW_education_expansion_desc:0 ""
+HAW_multi_culturalism:0 "Multi-Cultralism"
+HAW_multi_culturalism_desc:0 ""
+HAW_hawaiian_revolution:0 "Hawaiian Revolution"
+HAW_hawaiian_revolution_desc:0 ""
+HAW_pinapple_union:0 "Pinapple Union"
+HAW_pinapple_union_desc:0 ""
+HAW_socialist_education:0 "Socialist Education"
+HAW_socialist_education_desc:0 ""
+HAW_peoples_victory:0 "People's Victory"
+HAW_peoples_victory_desc:0 ""
+####Economics####
+HAW_building_our_economy:0 "Building Our Economy"
+HAW_building_our_economy_desc:0 ""
+HAW_foreign_investment:0 "Foreign Investment" 
+HAW_foreign_investment_desc:0 ""
+HAW_maratime_trade:0 "Maritime Trade"
+HAW_maratime_trade_desc:0 ""
+HAW_domestic_industry:0 "Domestic Industry"
+HAW_domestic_industry_desc:0 ""
+HAW_plantations:0 "Plantation Support"
+HAW_plantations_desc:0 ""
+HAW_land_reform:0 "Land Reform"
+HAW_land_reform_desc:0 ""
+HAW_thriving_economy:0 "Thriving Economy"
+HAW_thriving_economy_desc:0 ""
+####Navy####
+HAW_navy:0 "Hawaiian Navy"
+HAW_navy_desc:0 ""
+HAW_submarine_doctrines:0 "Submarine Doctrines"
+HAW_submarine_doctrines_desc:0 ""
+HAW_submarine_focus:0 "Submarine Focus"
+HAW_submarine_focus_desc:0 ""
+HAW_grand_navy:0 "Hawaiian Grand Navy"
+HAW_grand_navy_desc:0 ""
+HAW_escorts:0 "Escorts"
+HAW_escorts_desc:0 ""
+HAW_hawaiian_marines:0 "Hawaiian Marines"
+HAW_hawaiian_marines_desc:0 ""
+HAW_improve_our_fleet:0 "Improve Our Fleet"
+HAW_improve_our_fleet_desc:0 ""
+HAW_fleet_in_being:0 "Fleet in Being"
+HAW_fleet_in_being_desc:0 ""
+HAW_trade_interdiction:0 "Trade Interdiction"
+HAW_trade_interdiction_desc:0 ""
+HAW_carriers:0 "Carrier Support"
+HAW_carriers_desc:0 ""
+####army####
+HAW_army:0 "Hawaiian National Guard"
+HAW_army_desc:0 ""
+HAW_focus_on_planning:0 "High Command"
+HAW_focus_on_planning_desc:0 ""
+HAW_superior_fire_power:0 "Superior Fire-Power"
+HAW_superior_fire_power_desc:0 ""
+HAW_honolulu_rifles:0 "Modernized Guns"
+HAW_honolulu_rifles_desc:0 ""
+HAW_military_factories:0 "Military Build-Up"
+HAW_military_factories_desc:0 ""
+HAW_strategic_information_services:0 "Strategic Information Services"
+HAW_new_army:0 "A Modern Army"
+####Air Force####
+HAW_airforce:0 "Create the Hawaiian Air-Force"
+HAW_airforce_desc:0 ""
+HAW_fighters:0 "Favor Fighters"
+HAW_fighters_desc:0 ""
+HAW_close_air_support:0 "Close Air Support"
+HAW_close_air_support_desc:0 ""
+HAW_bombers:0 "Favor Bombers"
+HAW_bombers_desc:0 ""
+HAW_naval_bombers:0 "Naval Bombers"
+HAW_naval_bombers_desc:0 ""
+HAW_expand_airports:0 "Expand Air-Ports"
+HAW_expand_airports_desc:0 ""
+HAW_hawaiian_jets:0 "Hawaiian Jets"
+HAW_hawaiian_jets_desc:0 ""
+HAW_radar:0 "Warning Systems"
+HAW_radar_desc:0 ""
+####Foreign Policy####
+HAW_foreign:0 "Foreign Policy"
+HAW_foreign_desc:0 ""
+HAW_american_protectorate:0 "American Protectorate"
+HAW_american_protectorate_desc:0 ""
+HAW_american_business:0 "American Business Ties"
+HAW_american_business_desc:0 ""
+HAW_american_freindship:0 ""
+HAW_american_freindship_desc:0 ""
+HAW_american_tech_sharing:0 "University of the Free World"
+HAW_american_tech_sharing_desc:0 ""
+HAW_international:0 "Join the International"
+HAW_international_desc:0 ""
+HAW_revolutionary_business:0 "Revolutionary Trade"
+HAW_revolutionary_business_desc:0 ""
+HAW_international_ties:0 "Ties with the International"
+HAW_international_ties_desc:0 ""
+HAW_international_tech_sharing:0 "Join the Phalanstere"
+HAW_international_tech_sharing_desc:0 ""
+HAW_join_canada:0 "Join the Entente"
+HAW_join_canada_desc:0 ""
+HAW_entente_business:0 "Entente Business Ties"
+HAW_entente_business_desc:0 ""
+HAW_entente_friendship:0 "Entente Friendship"
+HAW_entente_friendship_desc:0 ""
+HAW_join_isac:0 "Join ISAC"
+HAW_join_isac_desc:0 ""
+HAW_join_japan:0 "Join Japan"
+HAW_join_japan_desc:0 ""
+HAW_japanese_business:0 "Japanese Business Ties"
+HAW_japanese_business_desc:0 ""
+HAW_japanese_friendship:0 "Japanese Friendship"
+HAW_japanese_friendship_desc:0 ""
+HAW_japanese_tech_sharing:0 "Join Rikagaku Kenkyusho"
+HAW_japanese_tech_sharing_desc:0 ""
+
+
+
+
 ### Parties ###
 HAW_totalist_party:0 "HCP"
 HAW_totalist_party_long:0 "Hawaiian Communist Party"
