--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -108,7 +108,7 @@ GER_Infantry_divs:0 "New Weapons"
 GER_Infantry_divs_desc:0 "While the German army has the greatest soldiers in the world, it must not lag behind in equipment. Even the greatest of soldier will have a hard time defeating a better equipped enemy."
 GER_political_1:0 "Imperial Restructuring"
 GER_political_1_desc:0 "While it is undeniable the German empire is the greatest nation to ever grace the pages of history, there is always room for improvement. In light of recent 'shortcomings' of our policies we should look into various changes and reforms we can make for a better future."
-GER_black_monday:0 "Aftermath of the Black Monday"
+GER_black_monday_aftermath:0 "The Aftermath of Black Monday"
 GER_black_monday_desc:0 "The great crash of 1936, widely known as the 'Black Monday' has had a massive impact on German politics, culture, and society. While the damage might never be fixed, we should enact reforms and recovery policies to regain some of our lost capacity."
 GER_mil_industry_1:0 "Stuff"
 GER_mil_industry_1_desc:0 ""
@@ -140,6 +140,7 @@ GER_kaiser_wilhelm_society:0 "The Kaiser Wilhelm Society"
 GER_kaiser_wilhelm_society_desc:0 "Recent investments in the Kaiser Wilhelm Society for the Advancement of Science have resulted in greater research capacity in various fields"
 GER_black_monday_radio:0 "The Kanzler and the Radio"
 GER_black_monday_radio_desc:0 "The crisis has shaken the Germans' belief in their country. Reichskanzler von Papen hopes to turn the tide with weekly radio addresses in which he will announce what steps the government has taken to combat the crisis."
+GER_groener2:0 "Reichsarbeitsdienst"
 GER_groener3:0 "The Sale of Ceylon"
 GER_groener3_desc:0 "The island of Ceylon is a very unprofitable part of our colonial empire, requiring massive investions every year. However, there have been proposals of selling the island to the Princely Federation - without doubt a profitable idea."
 GER_schacht1:0 "Bail out Junker Estates"
@@ -178,6 +179,23 @@ GER_bombergruppen:0 "Bombergruppen Doctrine"
 GER_bombergruppen_desc:0 ""
 GER_singapore_airstrips:0 "Expand Singapore Airstrips"
 GER_singapore_airstrips_desc:0 ""
+GER_post:0 "Unify German post departments"
+GER_post_desc:0 ""
+GER_disband_reichstag:0 "Disband the Reichstag"
+GER_parlamentsvertrauen:0 "Parlamentsvertrauen"
+GER_parlamentsvertrauen_desc:0 ""
+GER_county_reforms:0 "Democracy in Prussia"
+GER_county_reforms_desc:0 ""
+GER_easter_promises:0 "The Easter Promises"
+GER_easter_promises_desc:0 ""
+GER_embrace_faud:0 "Embrace the FAUD"
+GER_embrace_faud_desc:0 ""
+GER_women_suffrage:0 "Women Suffrage"
+GER_women_suffrage_desc:0 ""
+GER_schleicher:0 "Schleicher's Kamarilla"
+GER_schleicher_desc:0 ""
+GER_restore_country_rights:0 "Restore the Bundesrat"
+GER_restore_country_rights_desc:0 ""
 
 ### Domestic Events
 
@@ -526,11 +544,6 @@ gerdom.88.d:0 "We are finally at war with hated German reactionaries! Shall we u
 gerdom.88.a:0 "Support them!"
 gerdom.88.b:0 "They can't handle this"
 
-gerdom.90.t:0 "Military mission to the Don-Kuban Union?"
-gerdom.90.d:0 "After its inclusion into Mitteleuropa, Don-Kuban union has officially requested a presence of German military mission, in order to help them modernise their obsolete armed forces. How shall we react?"
-gerdom.90.a:0 "Sent military mission to Don-Kuban Union!"
-gerdom.90.b:0 "No, it's not necessary"
-
 gerdom.91.t:0 "German military mission arrives to Don-Kuban Union"
 gerdom.91.d:0 "German Empire decided to send military mission to our homeland in order to help us improve our obsolete armed forces."
 gerdom.91.a:0 "Great!"
@@ -551,8 +564,9 @@ gerdom.94.a:0 "Announce our commitment to African autonomy - if we win!"
 
 gerdom.95.t:0 "Afrikakorps - Deutsch-Ostafrika"
 gerdom.95.d:0 "The site of some of the most impressive and victorious battles fought by the German colonial army under von Lettow-Vorbeck during the Weltkrieg, Ostafrika with its capital of Dar-es-Salaam is seen by most as the jewel within the crown of the Reich’s African colonial empire. As such the German administration is thoroughly entrenched and cooperation with the natives run smoothly, resulting in a large turnout of volunteers for the new Schutztruppen."
+
 gerdom.96.t:0 "Afrikakorps - Deutsch-Kongo"
-gerdom.96.d:0 "Taken from the Belgic state after the Weltkrieg, the Congo occupies the heart of Central Africa and has been for the last decades of German administration been heavily militarised to secure the Reich's control over the province."
+gerdom.96.d:0 "Taken from the Belgian state after the Weltkrieg, the Congo occupies the heart of Central Africa and has been for the last decades of German administration been heavily militarised to secure the Reich's control over the province."
 
 gerdom.97.t:0 "Afrikakorps - Äquatorialafrika"
 gerdom.97.d:0 "Strategically located to the immediate south of the Sahara, the colony of German Equatorial Africa deploys some of the most impressive auxiliary troops."
@@ -890,37 +904,37 @@ gerdom.102.a:0 "Irren ist menschlich!"
 gerdom.102.b:0 "Does somebody have Nicolai's number?"
 gerdom.102.c:0 "What was his name again? Kanaris?"
 
-gerflavour.1.t:0 "Sedantag"
-gerflavour.1.d:0 "After the Franco-German war of 1870 to 1871, the Sedantag was established to celebrate our war-deciding victory at Sedan. Originally a holiday to honour the Prussian military, the Sedantag transformed into celebrating the foundation of the Reich, and after the Weltkrieg the defeat of those forces that tried to destroy it. \n\nThroughhout every town and village from Aachen to Memel, every street is decorated in black, white, and red. Every bell proudly proclaims this day of celebration. Nobility, soldiers and unnumbered veterans parade proudly through the streets, cheered by the happy masses. Indeed, this is a good day, a day that reminds us of the peace and prosperity we have enjoyed since the forging of the Reich."
-gerflavour.1.a:0 "Heil dem Kaiserreich!"
+gerfla.1.t:0 "Sedantag"
+gerfla.1.d:0 "After the Franco-German war of 1870 to 1871, the Sedantag was established to celebrate our war-deciding victory at Sedan. Originally a holiday to honour the Prussian military, the Sedantag transformed into celebrating the foundation of the Reich, and after the Weltkrieg the defeat of those forces that tried to destroy it. \n\nThroughhout every town and village from Aachen to Memel, every street is decorated in black, white, and red. Every bell proudly proclaims this day of celebration. Nobility, soldiers and unnumbered veterans parade proudly through the streets, cheered by the happy masses. Indeed, this is a good day, a day that reminds us of the peace and prosperity we have enjoyed since the forging of the Reich."
+gerfla.1.a:0 "Heil dem Kaiserreich!"
 
-gerflavour.2.t:0 "Luise Hoffmann's pacific flight"
-gerflavour.2.d:0 "Luise Hoffmann was the first German woman to gain a pilot's license. After her 1933 transatlantic solo flight she has become one of Germany's most famous aviation pioneers, along heroes like Manfred von Richthofen and Gunther Pluschow. Today, Fraulein Hoffmann has acomplished a new long distance record in her customized Fokker F-IX. Starting in Tahiti 36 hours ago, Fraulein Hoffmann today landed savely in Lae on German New Guinea, where she was welcomed by a jubilous crowd and governor Albert Hahl. \n\nIt has been rumored that Hoffmann will soon attempt a solo flight around the world. This would place her at a direct competition with the Red Baron who is planning a similar endeavour..."
-gerflavour.2.a:0 "What an accomplishment!"
+gerfla.2.t:0 "Luise Hoffmann's pacific flight"
+gerfla.2.d:0 "Luise Hoffmann was the first German woman to gain a pilot's license. After her 1933 transatlantic solo flight she has become one of Germany's most famous aviation pioneers, along heroes like Manfred von Richthofen and Gunther Pluschow. Today, Fraulein Hoffmann has acomplished a new long distance record in her customized Fokker F-IX. Starting in Tahiti 36 hours ago, Fraulein Hoffmann today landed savely in Lae on German New Guinea, where she was welcomed by a jubilous crowd and governor Albert Hahl. \n\nIt has been rumored that Hoffmann will soon attempt a solo flight around the world. This would place her at a direct competition with the Red Baron who is planning a similar endeavour..."
+gerfla.2.a:0 "What an accomplishment!"
 
-gerflavour.3.t:0 "Hoffmann vs von Richthofen"
-gerflavour.3.d:0 "An exciting day for the history of aviation. Manfred von Richthofen has accepted Luise Hoffmann's challenge. Today both pilots, flying customized Fokker XIs, started in Daressalam in Mittelafrika for the first solo flight and air race around the world. His majesty has wished best luck and Godspeed to both pilots."
-gerflavour.3.a:0 "How exciting!"
+gerfla.3.t:0 "Hoffmann vs von Richthofen"
+gerfla.3.d:0 "An exciting day for the history of aviation. Manfred von Richthofen has accepted Luise Hoffmann's challenge. Today both pilots, flying customized Fokker XIs, started in Daressalam in Mittelafrika for the first solo flight and air race around the world. His majesty has wished best luck and Godspeed to both pilots."
+gerfla.3.a:0 "How exciting!"
 
-gerflavour.4.t:0 "Hoffmann wins"
-gerflavour.4.d:0 "Luise Hoffmann has just landed in Daressalam! She is now offically the first person to fly alone around the world! Manfred von Richthofen has already congratulated his opponent over radio. Talking to the assembled reporters, Fräulein Hoffmann urged girls and women in Germany to persue their dreams, whatever may stand in their way."
-gerflavour.4.a:0 "Congratulations to a great woman!"
+gerfla.4.t:0 "Hoffmann wins"
+gerfla.4.d:0 "Luise Hoffmann has just landed in Daressalam! She is now offically the first person to fly alone around the world! Manfred von Richthofen has already congratulated his opponent over radio. Talking to the assembled reporters, Fräulein Hoffmann urged girls and women in Germany to persue their dreams, whatever may stand in their way."
+gerfla.4.a:0 "Congratulations to a great woman!"
 
-gerflavour.5.t:0 "von Richthofen wins"
-gerflavour.5.d:0 "Manfred von Richthofen has just landed in Daressalam! He is now offically the first man to fly alone around the world! Luise Hoffmann has already congratulated her opponent over radio. Again, the german flying legend has proven to be the world's best pilot."
-gerflavour.5.a:0 "Congratulations to a German hero!"
+gerfla.5.t:0 "von Richthofen wins"
+gerfla.5.d:0 "Manfred von Richthofen has just landed in Daressalam! He is now offically the first man to fly alone around the world! Luise Hoffmann has already congratulated her opponent over radio. Again, the german flying legend has proven to be the world's best pilot."
+gerfla.5.a:0 "Congratulations to a German hero!"
 
-gerflavour.6.t:0 "Erich von Ludendorff dies"
-gerflavour.6.d:0 "Even after his death was reported early this morning, Erich von Ludendorff remains one of the most controversial persons in recent German history. On one hand he was a hero of the Weltkrieg, the orchestrator of German victory in 1919. On the other hand, most Germans haven't forgotten his ensuing military dictatorship, that only ended when Admiral Von Tirpitz forced him to retire after the infamous Osthilfeskandal in 1924. Although Ludendorff still recieved some honours for his service, like his knighthood, the former quartermaster-general mostly led a secluded life at his estate afterwards."
-gerflavour.6.a:0 "Let's remember the genius, not the dictator."
+gerfla.6.t:0 "Erich von Ludendorff dies"
+gerfla.6.d:0 "Even after his death was reported early this morning, Erich von Ludendorff remains one of the most controversial persons in recent German history. On one hand he was a hero of the Weltkrieg, the orchestrator of German victory in 1919. On the other hand, most Germans haven't forgotten his ensuing military dictatorship, that only ended when Admiral Von Tirpitz forced him to retire after the infamous Osthilfeskandal in 1924. Although Ludendorff still recieved some honours for his service, like his knighthood, the former quartermaster-general mostly led a secluded life at his estate afterwards."
+gerfla.6.a:0 "Let's remember the genius, not the dictator."
 
-gerflavour.7.t:0 "Georg Michaelis dies"
-gerflavour.7.d:0 "The former Reichskanzler Georg Michaelis died today at the age of 78. Succeeding von Bethmann-Hollweg as Imperial Chancellor in 1917, the first and until now the only commoner to have acceeded to the post of German chancellor, he was considered by many as the stooge of the Hindenburg-Ludendorff dictatorship, being forced to resign and replaced by Hindenburg after Ludendorff grew dissatisfied with him in 1919. As a former Reichskanzler, he received a state funeral, but the Kaiser refused to attend."
-gerflavour.7.a:0 "He was a commoner and a stooge, but a Chancellor after all."
+gerfla.7.t:0 "Georg Michaelis dies"
+gerfla.7.d:0 "The former Reichskanzler Georg Michaelis died today at the age of 78. Succeeding von Bethmann-Hollweg as Imperial Chancellor in 1917, the first and until now the only commoner to have acceeded to the post of German chancellor, he was considered by many as the stooge of the Hindenburg-Ludendorff dictatorship, being forced to resign and replaced by Hindenburg after Ludendorff grew dissatisfied with him in 1919. As a former Reichskanzler, he received a state funeral, but the Kaiser refused to attend."
+gerfla.7.a:0 "He was a commoner and a stooge, but a Chancellor after all."
 
-gerflavour.8.t:0 "Tenth anniversary of von Tirpitz' death"
-gerflavour.8.d:0 "Today is the tenth anniversary of the death of the Great Chancellor and Admiral Alfred von Tirpitz. As the eight Chancellor and Commander of the German Navy Tirpitz led the Kaiserreich out of the Ludendorff dicatorship, initiating the Golden Age that lasted through the Twenties until his death. \n\nAfter his death, his Deutsche Vaterlandspartei (German Fatherland party, DVLP), reformed into the Junker party it is today under their new leader, Alfred Hugenberg, opening the way for the von Papen's Deutschkonservative Partei (German Conservative Party, DKP). And while the Reich enjoyed prosperity under his reign, he also continued o hold off on fulfilling the Kaiser's Easter Promises from 1917, leaving us with some troubles in the past years. \n\nStill, his prestige is enourmous, and the anniversary of his death has been accompanied by public demonstrations of respect all across the Empire."
-gerflavour.8.a:0 "And what a giant he was!"
+gerfla.8.t:0 "Tenth anniversary of von Tirpitz' death"
+gerfla.8.d:0 "Today is the tenth anniversary of the death of the Great Chancellor and Admiral Alfred von Tirpitz. As the eight Chancellor and Commander of the German Navy Tirpitz led the Kaiserreich out of the Ludendorff dicatorship, initiating the Golden Age that lasted through the Twenties until his death. \n\nAfter his death, his Deutsche Vaterlandspartei (German Fatherland party, DVLP), reformed into the Junker party it is today under their new leader, Alfred Hugenberg, opening the way for the von Papen's Deutschkonservative Partei (German Conservative Party, DKP). And while the Reich enjoyed prosperity under his reign, he also continued o hold off on fulfilling the Kaiser's Easter Promises from 1917, leaving us with some troubles in the past years. \n\nStill, his prestige is enourmous, and the anniversary of his death has been accompanied by public demonstrations of respect all across the Empire."
+gerfla.8.a:0 "And what a giant he was!"
 
 ### Ideas
 black_guarantee:0 "Guaranteed holdings of private individuals"
@@ -969,7 +983,7 @@ women_suffrage:0 "Awareness of the issue of Women Suffrage"
 GER_women_suffrage_tp:0 "Awareness of the issue of Women Suffrage will rise."
 GER_women_suffrage_high_tp:0 "Awareness of the issue of Women Suffrage will rise a lot."
 GER_halbstarke:0 "Problems with Halbstarke"
-1934_complete:0 "1934 Navy Program completed"
+navy_1934_complete:0 "1934 Navy Program completed"
 
 ### Opinion Modifiers
 sri_lanka:0 "Imperialist Bastard"
