* added two new states (Kolhapur and Trivancore, split off from Mysore and Madurai respectively)
* reduced Hyderabad to 5 from 15 VP's
* added more cities/victory points to the Indian states
* fixed position of Colombo's victory point

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -866,3 +866,5 @@
  STATE_864:0 "Savo"
  STATE_865:0 "Länsi-Karjala"
  STATE_866:0 "Gelderland"
+ STATE_867:0 "Trivancore"
+ STATE_868:0 "Kolhapur"
