--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -68,7 +68,6 @@
  VICTORY_POINTS_1170:0 "Lashio"
  VICTORY_POINTS_1182:0 "Tokyo"
  VICTORY_POINTS_1208:0 "Kuching"
- VICTORY_POINTS_1213:0 "Colombo"
  VICTORY_POINTS_1221:0 "Batangas"
  VICTORY_POINTS_1269:0 "Guadalcanal"
  VICTORY_POINTS_1273:0 "Goa"
@@ -91,6 +90,7 @@
  VICTORY_POINTS_1550:0 "Santiago de Cuba"
  VICTORY_POINTS_1562:0 "San Diego"
  VICTORY_POINTS_1563:0 "Pakxe"
+ VICTORY_POINTS_1581:0 "Imphal"
  VICTORY_POINTS_1591:0 "Alma-Ata"
  VICTORY_POINTS_1592:0 "Champassak"
  VICTORY_POINTS_1592:0 "Champassak"
@@ -111,6 +111,7 @@
  VICTORY_POINTS_1866:0 "Minneapolis"
  VICTORY_POINTS_1896:0 "Tabriz"
  VICTORY_POINTS_1903:0 "Malabo"
+ VICTORY_POINTS_1908:0 "Jaipur"
  VICTORY_POINTS_1909:0 "Conakry"
  VICTORY_POINTS_1944:0 "Maracaibo"
  VICTORY_POINTS_1965:0 "Mexico City"
@@ -121,6 +122,7 @@
  VICTORY_POINTS_2026:0 "Isfahan"
  VICTORY_POINTS_2038:0 "Freetown"
  VICTORY_POINTS_2038:0 "Freistadt"
+ VICTORY_POINTS_2041:1 "Srinagar"
  VICTORY_POINTS_2045:0 "Tianshui"
  VICTORY_POINTS_2050:0 "Lagos"
  VICTORY_POINTS_2056:0 "Niamey"
@@ -221,6 +223,7 @@
  VICTORY_POINTS_4318:0 "Putao"
  VICTORY_POINTS_4329:0 "Port Moresby"
  VICTORY_POINTS_4333:0 "Akmolinsk"
+ VICTORY_POINTS_4344:0 "Mysore"
  VICTORY_POINTS_4345:0 "Montréal"
  VICTORY_POINTS_4348:0 "Kanchanaburi"
  VICTORY_POINTS_4357:0 "North Palau"
@@ -258,7 +261,9 @@
  VICTORY_POINTS_4865:0 "Salt Lake City"
  VICTORY_POINTS_4872:0 "Winnipeg"
  VICTORY_POINTS_4879:0 "Windhoek"
+ VICTORY_POINTS_4883:0 "Nagpur"
  VICTORY_POINTS_4893:0 "Herat"
+ VICTORY_POINTS_4915:0 "Agra"
  VICTORY_POINTS_4925:0 "Chengdu"
  VICTORY_POINTS_4927:0 "Bamako"
  VICTORY_POINTS_4948:0 "Dakar"
@@ -365,12 +370,14 @@
  VICTORY_POINTS_7315:0 "Seattle"
  VICTORY_POINTS_7329:0 "Kota Bharu"
  VICTORY_POINTS_7342:0 "Penang" #Penang
+ VICTORY_POINTS_7344:0 "Colombo"
  VICTORY_POINTS_7361:0 "Halifax"
  VICTORY_POINTS_7371:0 "Bandar Brunei"
  VICTORY_POINTS_7375:0 "Perm"
  VICTORY_POINTS_7376:0 "Phnom Penh"
  VICTORY_POINTS_7381:0 "Batavia"
  VICTORY_POINTS_7394:0 "Cork"
+ VICTORY_POINTS_7402:0 "Trivandrum"
  VICTORY_POINTS_7408:0 "Krungthep Maha Nakhon" #Bangkok
  VICTORY_POINTS_7418:0 "Xi'an"
  VICTORY_POINTS_7427:0 "Malakka" #Malacca
@@ -411,6 +418,7 @@
  VICTORY_POINTS_8049:0 "Yan'an"
  VICTORY_POINTS_8085:0 "Kuwait City"
  VICTORY_POINTS_8087:0 "Hyderabad"
+ VICTORY_POINTS_8098:0 "Quetta"
  VICTORY_POINTS_8111:0 "El Aaiún"
  VICTORY_POINTS_8113:0 "Caracas"
  VICTORY_POINTS_8117:0 "Shiraz"
@@ -488,14 +496,18 @@
  VICTORY_POINTS_9974:0 "Ningbo"
  VICTORY_POINTS_9975:0 "Ahmadabad"
  VICTORY_POINTS_9979:0 "Malaga"
+ VICTORY_POINTS_9991:0 "Chittagong"
  VICTORY_POINTS_9994:0 "Bizerte"
  VICTORY_POINTS_10000:0 "Qingdao"
+ VICTORY_POINTS_10001:0 "Vizagapatnam"
  VICTORY_POINTS_10007:0 "Rhodes"
  VICTORY_POINTS_10024:0 "Murcia"
  VICTORY_POINTS_10032:0 "Kanazawa"
  VICTORY_POINTS_10062:0 "Hong Kong"
+ VICTORY_POINTS_10066:0 "Lahore"
  VICTORY_POINTS_10068:0 "Tianjin"
  VICTORY_POINTS_10074:0 "Palermo"
+ VICTORY_POINTS_10088:0 "Cuttack"
  VICTORY_POINTS_10106:0 "Musul"
  VICTORY_POINTS_10125:0 "Nagoya"
  VICTORY_POINTS_10156:0 "Mambang" #Satun
@@ -613,6 +625,7 @@
  VICTORY_POINTS_11969:0 "Tunis"
  VICTORY_POINTS_12003:0 "Valletta" #Malta
  VICTORY_POINTS_12068:0 "Takao" #Gaoxiong/KaohsiungTakao/Takow
+ VICTORY_POINTS_12080:0 "Indore"
  VICTORY_POINTS_12090:0 "Sitwe"
  VICTORY_POINTS_12113:0 "Tanjung Pinang"
  VICTORY_POINTS_12118:0 "Cebu"
@@ -622,6 +635,7 @@
  VICTORY_POINTS_12137:0 "Lucknow"
  VICTORY_POINTS_12140:0 "Guam"
  VICTORY_POINTS_12149:0 "Québec"
+ VICTORY_POINTS_12182:0 "Poona"
  VICTORY_POINTS_12189:0 "Khabarovsk"
  VICTORY_POINTS_12190:0 "Dili"
  VICTORY_POINTS_12201:0 "Surat Thani"
@@ -632,12 +646,14 @@
  VICTORY_POINTS_12256:0 "Toungoo"
  VICTORY_POINTS_12268:0 "Palembang"
  VICTORY_POINTS_12289:0 "Fredericton"
+ VICTORY_POINTS_12295:0 "Kolhapur"
  VICTORY_POINTS_12299:0 "Singapur" #Singapore
  VICTORY_POINTS_12320:0 "Yerevan"
  VICTORY_POINTS_12335:0 "Monywa"
  VICTORY_POINTS_12357:0 "Milwaukee"
  VICTORY_POINTS_12360:0 "Khon Kaen"
  VICTORY_POINTS_12364:0 "Buenos Aires"
+ VICTORY_POINTS_12366:0 "Gauhati"
  VICTORY_POINTS_12371:0 "Hollandia"
  VICTORY_POINTS_12384:0 "Atlanta"
  VICTORY_POINTS_12406:0 "Sydney"
@@ -670,6 +686,7 @@
  VICTORY_POINTS_12823:0 "San Salvador"
  VICTORY_POINTS_12835:0 "Monterrey"
  VICTORY_POINTS_12853:0 "Belém"
+ VICTORY_POINTS_12854:0 "Jubbalpur"
  VICTORY_POINTS_12883:0 "Jeddah"
  VICTORY_POINTS_12885:0 "Cayenne"
  VICTORY_POINTS_12891:0 "Bissau"
